@@ -19,7 +19,7 @@
 # This script receives the following parameters: ./script [chunk] [jobname]
 # Note: I recommend to use ~nefias/nefias as tmpfs to speed up the 'cat' command and to limit disk I/O!
 
-source ~/nefias/scripts/nefias_lib.sh
+source "`dirname $0`/nefias_lib.sh"
 NEFIAS_INIT_PER_FLOW $1 $2 "tcp"
 
 WINDOWSIZES="1000 1500 2000 2500 3000 4000 5000"
