@@ -4,6 +4,7 @@ v-0.8 : 2020-??-??
  - make sure ./results, $SLAVE_SCRIPT and $SLAVE_HOSTCONFIG files exist
    (and that ./results is a directory)
  - add kappa framelen+IAT versions that support multiple window sizes
+ - Add comment on how to run parallel computations on a slave node (tested)
 
 v-0.7 : 2020-03-07
  - initial upload to GitHub
